media-keys: Fix shutdown dialog delay when using kbd shortcut

After pressing the Ctrl+Alt+Del shortcut, the shutdown dialog doesn't
appear on screen for a couple of seconds.

The media-keys daemon calls the 'Shutdown' method synchronously. After that
gnome-session calls the daemon with 'QueryEndSession'. The daemon cannot
reply as it's blocked waiting for the reply to the Shutdown method.

Sending the message asynchronously fixes that delay.

Based on report by Xiaoguang Wang <xwang@suse.com>

https://bugzilla.gnome.org/show_bug.cgi?id=774452